[package]
name = "cossacks3real"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.3"
bevy_mod_picking = { version = "0.15.0", default-features = false, features = ['backend_raycast', 'selection', 'highlight'] }
